# travelassistsim

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
config/: kpis.yaml  settings.yaml
data/raw/cases/: fact_case.csv
data/raw/dimensions/: dim_agent.csv  dim_case_type.csv  dim_channel.csv  dim_country.csv  dim_policy_plan.csv  dim_priority.csv  dim_provider.csv  dim_status.csv  dim_team.csv
docs/: architecture.md  project_scope.md
output/reports/step2a_data_understanding/: dimension_summary.csv  dist_assigned_agent_id_top.csv  dist_assigned_team_id.csv  dist_assigned_team_id_with_team_name.csv  dist_case_type_id.csv  dist_case_type_id_with_case_type_name.csv  dist_current_status_id.csv  dist_current_status_id_with_status_name.csv  dist_escalated_flag.csv  dist_intake_channel_id.csv  dist_intake_channel_id_with_channel_name.csv  dist_is_vip_case_flag.csv  dist_priority_id.csv  dist_priority_id_with_priority_name.csv  dist_reopened_flag.csv  duplicate_case_id_counts.csv  duplicate_full_rows.csv  fact_case_cost_by_case_type.csv  fact_case_cost_summary.csv  fact_case_duration_hours.csv  fact_case_fk_unmatched_samples.csv  step2a_summary.md
output/reports/step2a_data_understanding_merged/: README.md  dist_case_type_combined.csv  dist_channel_combined.csv  dist_flags_combined.csv  dist_priority_combined.csv  dist_status_combined.csv  dist_team_combined.csv  fact_case_cost_summary.csv  (+4 more)
scripts/: bootstrap.py  run_cli.py
src/travelassist/: __init__.py  cli.py  config.py  logging_utils.py  paths.py  schemas.py
tests/: test_config_load.py
(+6 files in other folders)
